--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 01:14:00 AM</p>
+    <p class="lastupdate">09/17/2020 01:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">58.0&#176;F</td>
+        <td class="data">57.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.2&#176;F</td>
+        <td class="data">44.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">60%</td>
+        <td class="data">61%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.951 inHg (-0.011)</td>
+        <td class="data">29.947 inHg (-0.013)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SSW (202&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -90,7 +90,7 @@
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
-        <td class="data">38%</td>
+        <td class="data">37%</td>
       </tr>
     </tbody>
   </table>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:05 AM">
             61.2</span><br/>
-          <span title="01:12:50 AM">
-            58.0</span>
+          <span title="01:18:38 AM">
+            57.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:12:50 AM" class="loval">
-            58.0</span>
+          <span title="01:18:38 AM" class="loval">
+            57.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -237,8 +237,8 @@
         <td class="data new_row hilo_day">
           <span title="12:25:38 AM">
             49.3</span><br/>
-          <span title="01:09:46 AM">
-            44.0</span>
+          <span title="01:14:32 AM">
+            43.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="08:48:40 PM (Wednesday)">
@@ -507,8 +507,8 @@
         <td class="data new_row hilo_day">
           <span title="12:01:00 AM">
             39</span><br/>
-          <span title="12:00:04 AM">
-            38</span>
+          <span title="01:17:00 AM">
+            37</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 10 hours, 27 minutes</td>
+      <td class="data">15 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 10 hours, 27 minutes</td>
+      <td class="data">15 days, 10 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
