--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 01:54:00 AM</p>
+    <p class="lastupdate">09/17/2020 01:59:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">57.1&#176;F</td>
+        <td class="data">57.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">57.1&#176;F</td>
+        <td class="data">57.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">57.1&#176;F</td>
+        <td class="data">57.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">45.8&#176;F</td>
+        <td class="data">45.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.950 inHg (-0.012)</td>
+        <td class="data">29.950 inHg (-0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph SW (225&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">73.4&#176;F</td>
+        <td class="data">73.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:05 AM">
             61.2</span><br/>
-          <span title="01:52:38 AM">
-            57.1</span>
+          <span title="01:57:46 AM">
+            57.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="01:52:38 AM" class="loval">
-            57.1</span>
+          <span title="01:57:46 AM" class="loval">
+            57.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          207
+          208
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 11 hours, 7 minutes</td>
+      <td class="data">15 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 11 hours, 7 minutes</td>
+      <td class="data">15 days, 11 hours, 12 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
