--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 06:39:00 AM</p>
+    <p class="lastupdate">09/17/2020 06:44:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">51.4&#176;F</td>
+        <td class="data">51.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.3&#176;F</td>
+        <td class="data">42.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">71%</td>
+        <td class="data">72%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.930 inHg (-0.003)</td>
+        <td class="data">29.929 inHg (-0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph E (90&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:05 AM">
             61.2</span><br/>
-          <span title="06:36:55 AM">
-            51.4</span>
+          <span title="06:43:35 AM">
+            51.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:36:55 AM" class="loval">
-            51.4</span>
+          <span title="06:43:35 AM" class="loval">
+            51.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          0</td>
+          1</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          172
+          165
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">94%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 15 hours, 52 minutes</td>
+      <td class="data">15 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 15 hours, 52 minutes</td>
+      <td class="data">15 days, 15 hours, 57 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
