--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/17/2020 06:44:00 AM</p>
+    <p class="lastupdate">09/17/2020 06:49:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">51.2&#176;F</td>
+        <td class="data">51.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">42.5&#176;F</td>
+        <td class="data">41.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">72%</td>
+        <td class="data">71%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.929 inHg (-0.002)</td>
+        <td class="data">29.934 inHg (0.002)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:05 AM">
             61.2</span><br/>
-          <span title="06:43:35 AM">
-            51.1</span>
+          <span title="06:45:07 AM">
+            51.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="02:42:47 PM (Wednesday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="06:43:35 AM" class="loval">
-            51.1</span>
+          <span title="06:45:07 AM" class="loval">
+            51.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:54:23 AM (Wednesday)" class="loval">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          165
+          164
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">15 days, 15 hours, 57 minutes</td>
+      <td class="data">15 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">15 days, 15 hours, 57 minutes</td>
+      <td class="data">15 days, 16 hours, 2 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
